Fix scrollbar always being visible in sidebar

--- a/src/components/controllers/page/sidebar.less
+++ b/src/components/controllers/page/sidebar.less
@@ -69,7 +69,7 @@
 	@media @sidebar-break {
 		position: sticky;
 		top: @header-height;
-		overflow: scroll;
+		overflow: auto;
 		height: calc(100vh - @header-height);
 
 		> * + * {
